  and this included the strings "no", "off" and "false", which should
  actually have mapped to, well, "false".)
- rand: use autoconf to detect presence of unix functions


New feature: Type-checking casts.
- defs: enable type-checking signed_cast()
- defs: add signed_cast<> for C++ mode
- defs: rewrite static_cast() to not cause -Wshadow warnings when nested


libHX 1.28 (November 18 2008)
=============================
- add HXTYPE_{U,}INT{8,16,32,64}
- add includedir to cflags (libHX.pc)


libHX 1.27 (October 23 2008)
============================
No functional changes for Linux platforms.

- build: fixed compile errors with i586-mingw32msvc cross compile
- regenerated the Makefile.in files in the tarball with an updated
  version of automake-tranquility so that they are now
  POSIX-compliant and work with BSD make


libHX 1.26 (October 12 2008)
============================
- add HX_hexdump() for debugging within programs
- fix double free in the error path of HX_getopt() when a long option preceded
  a short option of which the latter had problems (i.e. missing argument)
- add actual typechecking to signed_cast()
- add typechecking to static_cast(),
  (but this is normally disabled to avoid compile interruption)


libHX 1.25 (September 07 2008)
==============================
- install missing misc.h
- HXmc: pointer was not automatically updated after hmc_trunc()
- HXmc: rename functions and put them into the HX* namespace (API change)
- HXmc: HXmc_strcpy(hxmc, NULL) will no longer free the mc but act like
  HXmc_strcpy(hxmc, "")
- HXmc: make code resistant to memory allocation failure


libHX 1.23 (September 02 2008)
==============================
- code cleanup: misc.h has been split off libHX.h
- add defs.h


libHX 1.22 (July 16 2008)
=========================
- need to use lstat() on directory operations such as mkdir and rrmdir
- use RTLD_LAZY when opening dynamic libraries
- add libxml_helper


libHX 1.18 (June 10 2008)
=========================